<resources>
    <string name="app_name">Nomaste</string>
    <string name="action_settings">Settings</string>
    <string name="select_robot">Select Robot</string>
    <string name="select_corner">Select Corner</string>
    <string name="select_height">Select Height</string>
    <string name="select_width">Select Width</string>
    <string name="cleaning_surface">Definde Cleaning Surface</string>



    <string name="push_button">push</string>
    <string name="pull_button">PULL</string>
    <string name="title_dist_sensor">Distance Sensor:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
